--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5"
   },
