all features move

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
-PORT = 8000
-DB_USER=postgres
-DB_HOST=localhost
-DB_DATABASE=postgres
-DB_PASSWORD=123456        # ← whatever you typed during installation
-DB_PORT=5432
+PORT=8000
+# PG_URI = postgresql://neondb_owner:npg_YcfertCg7Q9O@ep-proud-math-a460orpn-pooler.us-east-1.aws.neon.tech/fakureta?sslmode=require&channel_binding=require
+PGUSER=miniapp
+PGPASSWORD=miniapp123
+PGDATABASE=fakureta
+PGHOST=localhost
+PGPORT=5432
